# hamiltonian_diagonalization

./: Makefile  Makefile.in  README.md  config.status  configure  configure.ac  hamiltonian_diagonalization_conf
src/: Makefile  Makefile.am  Makefile.in
src/basis/: fermion_fock_basis.cpp  fermion_fock_basis.hpp  two_level_fermion_fock_basis.cpp  two_level_fermion_fock_basis.hpp
src/basis/.deps/: fermion_fock_basis.Po  two_level_fermion_fock_basis.Po
src/fqhe_sphere/interaction_pseudopotentials/: coulomb_pseudopotentials.cpp  coulomb_pseudopotentials.hpp
src/fqhe_sphere/interaction_pseudopotentials/.deps/: coulomb_pseudopotentials.Po
src/fqhe_sphere/main/: fqhe_sphere_spinless_fermions_diagonalization.cpp
src/fqhe_sphere/main/.deps/: fqhe_sphere_spinless_fermions_diagonalization.Po
src/fqhe_sphere/program_options/: pseudopotential_hamiltonian_options.hpp  pseudopotential_model_options.hpp
src/fqhe_sphere/pseudopotential_hamiltonian/: angular_momentum_constraint.hpp  lookup_tables.cpp  lookup_tables.hpp  pseudopotential_hamiltonian.cpp  pseudopotential_hamiltonian.hpp  pseudopotential_hamiltonian_base.hpp  pseudopotential_hamiltonian_data.cpp  pseudopotential_hamiltonian_data.hpp  two_level_angular_momentum_constraint.hpp  two_level_pseudopotential_hamiltonian.cpp  two_level_pseudopotential_hamiltonian.hpp
src/fqhe_sphere/pseudopotential_model/: angular_momentum_constraint.hpp  lookup_tables.cpp  lookup_tables.hpp  pseudopotential_model.cpp  pseudopotential_model.hpp  pseudopotential_model_base.hpp  pseudopotential_model_data.cpp  pseudopotential_model_data.hpp  term_tables.cpp  term_tables.hpp  two_level_angular_momentum_constraint.hpp  two_level_pseudopotential_model.cpp  two_level_pseudopotential_model.hpp
src/fqhe_sphere/pseudopotential_model/.deps/: lookup_tables.Po  pseudopotential_hamiltonian.Po  pseudopotential_hamiltonian_data.Po  pseudopotential_model.Po  pseudopotential_model_data.Po  term_tables.Po  two_level_pseudopotential_hamiltonian.Po  two_level_pseudopotential_model.Po
src/hamiltonians/: hamiltonian_base.hpp  hamiltonian_data.cpp  hamiltonian_data.hpp  matrix_vector_routines.hpp  quadratic_term_hash_tables_base.hpp  quadratic_term_tables_base.hpp  quartic_term_hash_tables_base.hpp  quartic_term_tables_base.hpp  spinless_fermion_hamiltonian.hpp  term_hash_tables_base.hpp  term_tables_base.hpp  two_level_spinless_fermion_hamiltonian.hpp
src/hamiltonians/.deps/: hamiltonian_data.Po
src/observables/: fermion_observables.hpp
src/optical_flux_lattice/interacting_ofl_model/: interacting_ofl_model.cpp  interacting_ofl_model.hpp  interacting_ofl_model_data.cpp  interacting_ofl_model_data.hpp  linear_momentum_constraints_2D.cpp  lookup_tables.cpp  lookup_tables.hpp  quartic_term_tables.hpp  term_hash_tables.cpp  term_hash_tables.hpp  term_tables.cpp  term_tables.hpp
src/optical_flux_lattice/interacting_ofl_model/.deps/: interacting_ofl_model.Po  interacting_ofl_model_data.Po  linear_momentum_constraints_2D.Po  term_hash_tables.Po  term_tables.Po
src/optical_flux_lattice/main/: optical_flux_lattice_diagonalization.cpp  optical_flux_lattice_noninteracting_model.cpp  optical_flux_lattice_single_particle_model.cpp  optical_flux_lattice_sql_gen.cpp
src/optical_flux_lattice/main/.deps/: optical_flux_lattice_diagonalization.Po  optical_flux_lattice_noninteracting_model.Po  optical_flux_lattice_sql_gen.Po
src/optical_flux_lattice/noninteracting_ofl_model/: noninteracting_ofl_model.cpp  noninteracting_ofl_model.hpp  noninteracting_ofl_model_data.cpp  noninteracting_ofl_model_data.hpp  noninteracting_ofl_model_grid.cpp  noninteracting_ofl_model_grid.hpp
src/optical_flux_lattice/noninteracting_ofl_model/.deps/: noninteracting_ofl_model.Po  noninteracting_ofl_model_data.Po  noninteracting_ofl_model_grid.Po
src/optical_flux_lattice/observables_manager/: observables_manager.cpp  observables_manager.hpp
src/optical_flux_lattice/optical_flux_lattice_hamiltonian/: linear_momentum_constraints_2D.cpp  linear_momentum_constraints_2D.hpp  lookup_tables.cpp  lookup_tables.hpp  optical_flux_lattice_hamiltonian.cpp  optical_flux_lattice_hamiltonian.hpp  optical_flux_lattice_hamiltonian_data.cpp  optical_flux_lattice_hamiltonian_data.hpp
src/optical_flux_lattice/program_options/: interacting_ofl_model_options.cpp  interacting_ofl_model_options.hpp  noninteracting_ofl_model_options.hpp  observables_options.hpp  optical_flux_lattice_hamiltonian_options.hpp  single_particle_hamiltonian_options.hpp  sql_options.hpp
src/optical_flux_lattice/single_particle_hamiltonian/: single_particle_hamiltonian.cpp  single_particle_hamiltonian.hpp  single_particle_hamiltonian_array.cpp  single_particle_hamiltonian_array.hpp  single_particle_parameters.cpp  single_particle_parameters.hpp
src/program_options/: arpack_options.hpp  general_options.cpp  general_options.hpp
src/program_options/.deps/: general_options.Po
src/python/: run_diagonalizations.py
src/utilities/algorithms/: binary_search.hpp  quick_sort.hpp
src/utilities/data_structures/: crs_sparse_matrix.hpp  lookup_hash_tables_base.hpp  lookup_tables_base.hpp  mapped_sparse_matrix.hpp  multi_key_hash.hpp  sparse_matrix.hpp  term_hash_tables_base.hpp  term_tables_base.hpp
src/utilities/general/: dcmplx_type_def.hpp  debug.hpp  i_const_def.hpp  orbital_and_state_defs.hpp  pi_const_def.hpp  run_script.hpp  serialize.hpp  template_tools.hpp  timer.hpp
src/utilities/mathematics/: array_convolution.hpp  binary_number_tools.hpp  binomial_table.cpp  binomial_table.hpp  binomials.cpp  binomials.hpp  clebsch_gordan_coefficients.cpp  clebsch_gordan_coefficients.hpp  combinatorics.hpp  dense_linear_algebra.hpp  fermions.hpp  kahan_arithmetic.hpp  lattice_vector.hpp  modulo.hpp  sparse_linear_algebra.hpp
src/utilities/wrappers/: arpack_wrapper.cpp  arpack_wrapper.hpp  blas_wrapper.hpp  clebsch_gordan_wrapper.hpp  fftw_wrapper.cpp  fftw_wrapper.hpp  io_wrapper.hpp  lapack_wrapper.hpp  mpi_wrapper.cpp  mpi_wrapper.hpp  murmur_hash_wrapper.hpp  program_options_wrapper.hpp  sqlite_wrapper.cpp  sqlite_wrapper.hpp
(+686 files in other folders)
